--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   
   header {
     background-color: #3498db;
-    color: red
+    color: black;
     padding: 1em;
     text-align: center;
   }
