--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   }
   
   nav a {
-    color: white;
+    color: black;
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
